1999-03-21  Tomas Ogren  <stric@ing.umu.se>

	* fvwm/builtins.c: Fixed various compiler warnings.

Sat Mar 20 15:22:02 1999  DanEspen  <dje@blue>

	* fvwm/builtins.c (SetColorLimit): Ignore ColorLimit if display
	depth exceeds 8 bits.

	* fvwm/fvwm2.1 (Example): Describe new behavior, colorlimit does
	nothing on display depths greater than 8, else new default is 255.

	* fvwm/fvwm.c (InitVariables): If screen depth is 8 bits or less,
	automatically colorlimit.

	* fvwm/fvwm2.1 (id): remove FvwmTalk

	* configure.in (xpm_problem): remove FvwmTalk

1999-03-20  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/move.c (moveLoop):
	* fvwm/virtual.c (MoveViewport): fixed a bug that caused a window
	that was being moved to flicker back to its original position when it
	was moved over the screen edge e.g. with EdgeScroll 10 10

	* fvwm/events.c (HandleEnterNotify):
	* fvwm/resize.c (resize_window):
	* fvwm/move.c (moveLoop): changes for new version of HandlePaging

	* fvwm/virtual.c (HandlePaging): rewrote HandlePaging to return
	immediately so resize or move can continue when the pointer is on the
	border

1999-03-16  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/fvwm2.1: documented inability to bind something to the corners
	of a naked transient

	* fvwm/events.c (HandleButtonPress): fixed bug: naked transients can't
	have functions bound to the frame with MouseFocusClickRaises.

	* INSTALL.fvwm:
	* configure.in: sorted options

1999-03-19  Andrew T. Veliath  <andrewtv@usa.net>

	* fvwm/builtins.c
	(add_item_to_menu),
	(add_item_to_func),
	(add_item_to_decor): Fix state changes to keep `+' happy.
	(SetButtonFlag): Reindent and make more readable.

1999-03-19  Tomas Ogren  <stric@ing.umu.se>

	* fvwm/fvwm2.1: Fixed some *roff tyops

1999-03-18  Paul D. Smith  <psmith@gnu.org>

	* libs/Module.c (SendText): Rewrite to work on RISC architectures
	where you can't dereference non-aligned pointers as ints.

	* configure.in: Use AC_FUNC_ALLOCA to test for alloca() support.