@@ -1504,6 +1504,9 @@ prior to the ImagePath command, or better use the '-m4-prefix' option
 to force all m4 directives to have a prefix of "m4_" (see the
 \fIFvwmM4\fP man page).
 
+During installation, some image directories are builtin to fvwm2.
+Any directories specified with this command are added to the front
+of the current image path.
 
 .IP "Key \fIkeyname Context Modifiers Function\fP"
 Binds a keyboard key to a specified \fIfvwm2\fP built-in function, or
