@@ -1,5 +1,10 @@
 Changes in alpha release 2.3.0 (February 1999)
 
+* Colorlimit command does nothing if display depth is greater than 8.
+  This helps if you want to use the same configuration on more than one
+  display depth.  ColorLimit defaults to ON if display depth is 8 bits
+  or less.  This should help new users.
+  
 * FvwmWinList option *FvwmWinListFollowWindowList to display the order that
   fvwm keeps windows in. You can now see the order that Next/Prev will take,
   Prev goes down the list, Next goes up (from the bottom).
@@ -81,10 +86,13 @@ Changes in alpha release 2.3.0 (February 1999)
   Tab to previous field.
   You can control vertical spacing on text so spacing is OK for help panels.
   A button can execute a synchronous shell command.
+  You can paste into a form
+  Forms can read configuration data.
 
 * IconPath and PixmapPath are replaced by single ImagePath.  All
   images, no matter what their format are searched for along the
-  ImagePath.
+  ImagePath.  The ImagePath command ADDS to the front of the
+  image path, preserving the built in ImagePath.
 
 Changes in official release 2.2 (February 1999)
 
